# batfish_playground

./: Dockerfile-batfish  pyproject.toml  tasks.py
regions/north_america/nyc/configs/: edge-firewall01.cfg  edge-sw01.cfg  internet-rtr01.cfg
