[tool.poetry]
name = "batfish_playground"
version = "0.1.0"
description = ""
authors = ["Anirudh Kamath <anirudhkamath@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
invoke = "^2.0.0"
pybatfish = "^2022.9.7"
netmiko = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
